--- a/httpd-proxy/var-www-html/index.html
+++ b/httpd-proxy/var-www-html/index.html
@@ -10,7 +10,7 @@
     <p>Apps:</p>
     <ul>
         <li><a href="/php-shib-protected/">PHP App Protected by Shibboleth SP</a></li>
-        <li><a href="/myapp/">Node App Protected by Shibboleth SP</a></li>
+        <li><a href="/protected-myapp/">Node App Protected by Shibboleth SP</a></li>
         <li><a href="/php-cas/">PHP App Protected by CAS hosted on Shibboleth IdP</a></li>
         <li><a href="/php-ssp-protected/">PHP App Protected by SimpleSAMLphp</a></li>
     </ul>
